# Sinsajo

./: readme.md
.github/workflows/: client.yml  server.yml
server/: .gitignore  Cargo.toml  pyproject.toml  whisper_ws_server.py
server/src/: config.rs  main.rs  model_downloader.rs
sinsajo_client/: .gitignore  README.md  pubspec.yaml
sinsajo_client/android/app/: build.gradle.kts
sinsajo_client/android/app/src/main/: AndroidManifest.xml
sinsajo_client/android/app/src/main/kotlin/com/example/sinsajo_client/: MainActivity.kt
sinsajo_client/lib/: main.dart
sinsajo_client/lib/providers/: settings_provider.dart  transcription_provider.dart
sinsajo_client/lib/screens/: settings_screen.dart  transcription_screen.dart
sinsajo_client/lib/services/: audio_service.dart  ws_service.dart
sinsajo_client/test/: widget_test.dart
sinsajo_client/test/providers/: transcription_provider_test.dart
sinsajo_client/test/services/: ws_service_test.dart
sinsajo_client/web/: index.html  manifest.json
