[package]
name = "sinsajo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transcribe-rs = { version = "0.3", features = ["onnx"] }
hound = "3.5"